--- a/device/config/chips/v853/configs/100ask/uboot-board.dts
+++ b/device/config/chips/v853/configs/100ask/uboot-board.dts
@@ -504,6 +504,45 @@
 	status = "disabled";
 };
 
+&lcd0 {
+        lcd_used            = <1>;
+        lcd_driver_name     = "default_lcd";
+        lcd_backlight       = <100>;
+
+        lcd_if = <0>;
+        lcd_hv_if = <0>;
+
+        lcd_x               = <1024>;
+        lcd_y               = <600>;
+        lcd_width           = <154>;
+        lcd_height          = <85>;
+        lcd_dclk_freq       = <51>;
+        lcd_hbp             = <140>;
+        lcd_ht              = <1344>;
+        lcd_hspw            = <20>;
+        lcd_vbp             = <20>;
+        lcd_vt              = <635>;
+        lcd_vspw            = <3>;
+
+        lcd_pwm_used        = <1>;
+        lcd_pwm_ch          = <9>;
+        lcd_pwm_freq        = <500>;
+        lcd_pwm_pol         = <1>;
+
+        lcd_frm = <1>;
+        lcd_io_phase = <0x0000>;
+        lcd_gamma_en = <0>;
+        lcd_cmap_en = <0>;
+        lcd_hv_clk_phase = <0>;
+        lcd_hv_sync_polarity= <0>;
+
+        lcd_power = "vcc-lcd";
+        lcd_pin_power = "vcc-pd";
+        pinctrl-0 = <&rgb18_pins_a>;
+        pinctrl-1 = <&rgb18_pins_b>;
+};
+
+/*
 &lcd0{
 
     base_config_start   = <1>;
@@ -560,6 +599,7 @@
 
 
 };
+*/
 
 /* &lcd0{
  *
@@ -643,6 +683,35 @@
 		allwinner,drive = <3>;
 		allwinner,pull = <0>;
 	};
+	rgb18_pins_a: rgb18@0 {
+                allwinner,pins = "PD0", "PD1", "PD2", "PD3", "PD4", "PD5", \
+                        "PD6", "PD7", "PD8", "PD9", "PD10", "PD11", \
+                        "PD12", "PD13", "PD14", "PD15", "PD16", "PD17", \
+                        "PD18", "PD19", "PD20", "PD21";
+                allwinner,pname = "lcdd2", "lcdd3", "lcdd4", "lcdd5", "lcdd6", "lcdd7", \
+                        "lcdd10", "lcdd11", "lcdd12", "lcdd13", "lcdd14", "lcdd15", \
+                        "lcdd18", "lcdd19", "lcdd20", "lcdd21", "lcdd22", "lcdd23", \
+                        "lcdpclk", "lcdde", "lcdhsync", "lcdvsync";
+                allwinner,function = "lcd";
+                allwinner,muxsel = <2>;
+                allwinner,drive = <3>;
+                allwinner,pull = <0>;
+        };
+        rgb18_pins_b: rgb18@1 {
+                        allwinner,pins = "PD0", "PD1", "PD2", "PD3", "PD4", "PD5", \
+                                        "PD6", "PD7", "PD8", "PD9", "PD10", "PD11", \
+                                        "PD12", "PD13", "PD14", "PD15", "PD16", "PD17", \
+                                        "PD18", "PD19", "PD20", "PD21";
+                        allwinner,pname = "lcdd2", "lcdd3", "lcdd4", "lcdd5", "lcdd6", "lcdd7", \
+                                        "lcdd10", "lcdd11", "lcdd12", "lcdd13", "lcdd14", "lcdd15", \
+                                        "lcdd18", "lcdd19", "lcdd20", "lcdd21", "lcdd22", "lcdd23", \
+                                        "lcdpclk", "lcdde", "lcdhsync", "lcdvsync";
+                        allwinner,function = "io_disabled";
+                        allwinner,muxsel = <0xf>;
+                        allwinner,drive = <3>;
+                        allwinner,pull = <0>;
+        };
+	
 };
 
 &disp {
